Upgraded dependencies with migration and added maven usage for fetching dependencies